welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: value @@ is not a member of Boolean
	if ( (!(day==0) @@ !(day==6)) && !(vacation)) {
                        ^alarmClock:11: error: value @@ is not a member of Boolean
	if ( (!(day==0) @@ !(day==6)) && (vacation)) {
                        ^alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
	if ( (!(day==0) @@ !(day==6)) && (vacation)) {
        ^